--- a/SnakeSFML.vcxproj.filters
+++ b/SnakeSFML.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="source\scenes\basic_scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\snake.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\runner.h">
@@ -35,6 +38,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\scenes\basic_scene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\snake.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\direction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
