--- a/SnakeSFML.vcxproj.filters
+++ b/SnakeSFML.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="source\snake\snake.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\grub.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\runner.h">
@@ -47,6 +50,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\snake\snake.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\grub.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
