--- a/SnakeSFML.vcxproj.filters
+++ b/SnakeSFML.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="source\grub.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\game_ui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\runner.h">
@@ -53,6 +56,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\grub.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\game_ui.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
